# metaspn-core

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
docs/: README.md  cli-reference.md  content-formats.md  directory-structure.md  enhancements.md  ingestion-guide.md
examples/: api_example.py  basic_usage.py
metaspn/: __init__.py
metaspn/analyzers/: __init__.py  games.py  impact.py  quality.py  trajectory.py
metaspn/api/: __init__.py  server.py
metaspn/cli/: __init__.py  commands.py
metaspn/core/: __init__.py  card.py  enhancements.py  level.py  metrics.py  profile.py  state_machine.py
metaspn/repo/: __init__.py  enhancement_store.py  loader.py  manifest.py  reader.py  structure.py  writer.py
metaspn/utils/: __init__.py  cache.py  dates.py  stats.py
tests/: __init__.py  conftest.py
tests/fixtures/sample_repo/.metaspn/: profile.json
tests/test_analyzers/: test_games.py  test_quality.py
tests/test_core/: test_level.py  test_metrics.py  test_profile.py  test_state_machine.py
tests/test_platforms/: __init__.py  test_platforms.py
tests/test_repo/: __init__.py  test_structure.py
