[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaspn"
version = "0.1.0"
description = "Measure transformation, not engagement"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Leo Guinan", email = "leo@metaspn.network"}
]
keywords = ["social-media", "metrics", "transformation", "content-analysis", "trading-cards"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",
    "pre-commit>=3.0.0",
    "bandit[toml]>=1.7.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
metaspn = "metaspn.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/metaspn/metaspn"
Documentation = "https://docs.metaspn.network"
Repository = "https://github.com/metaspn/metaspn"
Issues = "https://github.com/metaspn/metaspn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaspn*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=metaspn --cov-report=term-missing"

[tool.coverage.run]
source = ["metaspn"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = [
    "B101",  # Allow assert statements
    "B112",  # Allow try/except/continue
    "B404",  # Allow subprocess import (used for git)
    "B603",  # Allow subprocess without shell
    "B607",  # Allow partial path (git)
]
